# FFT-Ocean-Simulation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  assets.cmake  imgui.ini
FFT-Sim/: CMakeLists.txt  main.cpp
FFT-Sim/include/: Lights.h  UI.h  camera.h  engine_psos.h  engine_util.h  resource_manager.h  sim_utils.h  vk_buffer.h  vk_descriptors.h  vk_engine.h  vk_images.h  vk_initializers.h  vk_pipelines.h  vk_types.h  vk_util.h
FFT-Sim/include/Renderers/: base_renderer.h  clustered_forward_renderer.cpp  clustered_forward_renderer.h  fft_renderer.cpp  fft_renderer.h  ground_truth_renderer.cpp  ground_truth_renderer.h  voxel_cone_tracing_renderer.cpp  voxel_cone_tracing_renderer.h
FFT-Sim/src/: UI.cpp  camera.cpp  engine_psos.cpp  engine_util.cpp  graphics.cpp  resource_manager.cpp  sim_utils.cpp  vk_buffer.cpp  vk_descriptors.cpp  vk_engine.cpp  vk_images.cpp  vk_initializers.cpp  vk_loader.cpp  vk_pipelines.cpp  vk_util.cpp  vma_definition.cpp
assets/shaders/: butterfly.comp  butterfly.spv  compile.bat  conjugate_spectrum.comp  conjugate_spectrum.spv  copy.comp  copy.spv  copy_height_buffer.comp  copy_height_buffer.spv  debug.comp  debug.spv  fft_horizontal.comp  fft_horizontal.spv  fft_vertical.comp  fft_vertical.spv  get_value.comp  get_value.spv  initial_spectrum.comp  initial_spectrum.spv  jonswap_spectrum.comp  jonswap_spectrum.spv  normal_map.comp  normal_map.spv  ocean.frag  ocean.frag.spv  ocean.vert  ocean.vert.spv  permute_and_scale.comp  permute_and_scale.spv  phase.comp  phase.spv  spectrum.comp  spectrum.spv  spectrum_wrapper.comp  spectrum_wrapper.spv  time_dependent_spectrum.comp  time_dependent_spectrum.spv
ddt_interface/: CMakeLists.txt  main_app.cpp  sim_utils.cpp  sim_utils.h
